# control-system-server

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  eslint.config.mts  nodemon.json  package.json  tsconfig.json  vcpkg.json
config/: config.json
src/: config.rs  config.ts  database.ts  error.rs  main.rs  server.ts  type.d.ts  utils.ts
src/database/: db.rs  models.rs
src/route/: device.rs  mod.rs  states.rs  timestamp.rs
src/router/: device.ts  envdata.ts  index.ts  timestamp.ts  type.d.ts
test/: config.json
