[package]
name = "control-system-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
chrono = "0.4.44"
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
mongodb = "3.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }
